# kinect_test

./: CMakeLists.txt  README.md  kinect.cpp  main.cpp
circle/: circle.cpp  circle.hpp
kinect/: kinect.cpp  kinect.hpp  logger.hpp
